Fixed biorender link

--- a/vignettes/workflow.rmd
+++ b/vignettes/workflow.rmd
@@ -42,7 +42,7 @@ In this workflow, we will demonstrate how to use the `NanoMethViz` package [@suN
 
 In this workflow, we will analyse ultra-long-read Nanopore sequencing data from the neural stem cells of triplicate E14.5 female mice [@gocukMeasuringInactivationSkew2024]. The mice were F1 crosses between an Xist knockout (X^ΔA^X) female [@royce-tollandArepeatLinksASF2010] and a Castaneus strain (CAST) male. The resulting offspring have sufficiently different parental chromosomes to allow effective genome-wide haplotyping to distinguish the parent-of-origin for long-reads, allowing for the identification of genes that are imprinted or strain-specific. The Xist KO of the maternal genome also guarantees that X-inactivation takes place on the paternal X chromosome, allowing for the study of X-inactivation. The DNA was sequenced on R9.4.1 PromethION flow cells, basecalled with Dorado, aligned to the mm10 mouse reference genome, and phased with WhatsHap [@martinWhatsHapFastAccurate2016], to produce the phased modBAM (Figure \@ref(fig:fig1)A). For illustrative purposes, we use a we use a subset of the data focusing on chromosome 7, which contains several known imprinted genes.
 
-```{r fig1, echo=FALSE, fig.cap ="**Overview of the workflow**. (A) Experimental setup for the data used in this workflow, from Gocuk and Lancaster et al., 2024. (B) Flowchart of the workflow for long-read methylation data visualisation and analysis using `NanoMethViz` and other Bioconductor packages including `limma`, `dmrseq`, `bsseq`, and `edgeR`. (C) Summary of data structures for the storage of methylation data used in different parts of the workflow. Xi: inactive X. Xa: active X. CAST: Castaneus. 5mC: 5-methylcytosine. MDS: multidimensional scaling. DMR: differentially methylated region. Figure created with \url{BioRender.com}."}
+```{r fig1, echo=FALSE, fig.cap ="**Overview of the workflow**. (A) Experimental setup for the data used in this workflow, from Gocuk and Lancaster et al., 2024. (B) Flowchart of the workflow for long-read methylation data visualisation and analysis using `NanoMethViz` and other Bioconductor packages including `limma`, `dmrseq`, `bsseq`, and `edgeR`. (C) Summary of data structures for the storage of methylation data used in different parts of the workflow. Xi: inactive X. Xa: active X. CAST: Castaneus. 5mC: 5-methylcytosine. MDS: multidimensional scaling. DMR: differentially methylated region. Figure created with [BioRender.com](BioRender.com)."}
 knitr::include_graphics("Figure1.png")
 ```
 
